<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/settingLabel"
        android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title.secondaryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTheme"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="124dp"
        android:text="@string/changeTheme"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMode"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="284dp"
        android:text="@string/setMode"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonTheme"
        android:layout_width="304dp"
        android:layout_height="73dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/toggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTheme"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnTheme1"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_icecream_24">

        </Button>

        <Button
            android:id="@+id/btnTheme2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_emoji_food_beverage_24">

        </Button>

        <Button
            android:id="@+id/btnDefault"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultTheme">

        </Button>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonMode"
        android:layout_width="304dp"
        android:layout_height="73dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/toggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMode"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnLightMode"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_light_mode_24">

        </Button>

        <Button
            android:id="@+id/btnDarkMode"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_dark_mode_24">

        </Button>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_main"
        />

</androidx.constraintlayout.widget.ConstraintLayout>